# erik.doytchinov

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  next.config.mjs  package-lock.json  package.json
client/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts.timestamp-1735102990820-38ea586ffedb1.mjs
client/public/blogs/: js_blog.md  test.md
client/src/: index.tsx  vite-env.d.ts
client/src/erik-doytchinov/: App.css  App.tsx
client/src/erik-doytchinov/blog/: Blog.tsx
client/src/erik-doytchinov/footage/: Footage.tsx  javascript-fundamentals.md
client/src/erik-doytchinov/inprogress/: InProgress.tsx
client/src/erik-doytchinov/portfolio/: Portfolio.tsx  experience.json  properties.json
server/: Dockerfile  README.md  pyproject.toml  run.py
server/etc/nginx/sites-available/: nginx.conf
src/: App.tsx
src/app/: layout.tsx  page.tsx
src/erik-doytchinov/: App.tsx
src/erik-doytchinov/blog/: Blog.tsx
src/erik-doytchinov/food/: Food.tsx
src/erik-doytchinov/footage/: Footage.tsx
src/erik-doytchinov/inprogress/: InProgress.tsx
src/erik-doytchinov/portfolio/: Portfolio.tsx
src/portfolio/: Portfolio.tsx
