[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["ErikDoytchinov <erik.doytchinov@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
flask-cors = "^4.0.1"
gunicorn = "^22.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

